@@ -1,4 +1,8 @@
-﻿drkns 12.04.2015 15:18:07 +0200 - build 4342
+﻿zg 12.04.2015 19:46:28 +0200 - build 4343
+
+1. уточнение 4332: смена кодировки в редакторе.
+
+drkns 12.04.2015 15:18:07 +0200 - build 4342
 
 1. С форума: падение при far /import
 
